[package]
name = "wstunnel-cli"
version = "10.1.10"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.44.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "local-time"] }
wstunnel = { path = ".." , features = ["clap"] }

[target.'cfg(not(any(target_env = "msvc", target_arch = "arm", target_arch = "x86")))'.dependencies]
tikv-jemallocator = "0.6"

[[bin]]
name = "wstunnel"
path = "src/main.rs"
